--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <img id="header-logo">
-        <a class="header-link" href="https://www.google.com/"></a>
-        <a class="header-link" href="https://www.google.com/"></a>
-        <a class="header-link" href="https://www.google.com/"></a>
+        <img id="header-logo" alt="Header Logo">
+        <a class="header-link" href="https://www.google.com/">header link one</a>
+        <a class="header-link" href="https://www.google.com/">header link two</a>
+        <a class="header-link" href="https://www.google.com/">header link three</a>
     </header>
     <div class="intro">
         <h1>This website is awesome</h1>
@@ -22,13 +22,13 @@
     <div class="random-info">
         <h2>Some random information.</h2>
         <img class="box">
-        <p class="subtext"></p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
         <img class="box">
-        <p class="subtext"></p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
         <img class="box">
-        <p class="subtext"></p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
         <img class="box">
-        <p class="subtext"></p>
+        <p class="subtext">this is some subtext under an illustration or image</p>
     </div>
     <div class="testimonial">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
@@ -37,7 +37,7 @@
     <div class="cta">
         <h3>Call to action! It's time!</h3>
         <p class="signup">Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <button id="button-cta">Sign up</button>
     </div>
     <footer>
         Copyright © The Odin Project 2021
