--- a/index.html
+++ b/index.html
@@ -9,36 +9,52 @@
 <body>
     <header>
         <img id="header-logo" alt="Header Logo">
-        <a class="header-link" href="https://www.google.com/">header link one</a>
-        <a class="header-link" href="https://www.google.com/">header link two</a>
-        <a class="header-link" href="https://www.google.com/">header link three</a>
+        <nav class="header-nav">
+            <a class="header-link" href="https://www.google.com/">header link one</a>
+            <a class="header-link" href="https://www.google.com/">header link two</a>
+            <a class="header-link" href="https://www.google.com/">header link three</a>
+        </nav>
     </header>
     <div class="intro">
-        <h1>This website is awesome</h1>
-        <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
-        <img id="intro-image">
+        <div class="left">
+            <h1>This website is awesome</h1>
+            <p class="description">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img id="intro-image" alt="placeholder for image">
     </div>
     <div class="random-info">
         <h2>Some random information.</h2>
-        <img class="box">
-        <p class="subtext">this is some subtext under an illustration or image</p>
-        <img class="box">
-        <p class="subtext">this is some subtext under an illustration or image</p>
-        <img class="box">
-        <p class="subtext">this is some subtext under an illustration or image</p>
-        <img class="box">
-        <p class="subtext">this is some subtext under an illustration or image</p>
+        <div class="boxes">
+            <div class=box>
+                <img class="boximage">
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class=box>
+                <img class="boximage">
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div><div class=box>
+                <img class="boximage">
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div><div class=box>
+                <img class="boximage">
+                <p class="subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="testimonial">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="author">-Thor, God of Thunder</p>
     </div>
     <div class="cta">
-        <h3>Call to action! It's time!</h3>
-        <p class="signup">Sign up for our product by clicking that button right over there!</p>
-        <button id="button-cta">Sign up</button>
-    </div>
+        <div class="cta-text">
+            <h3>Call to action! It's time!</h3>
+            <p class="signup">Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <div class="cta-button-box">
+            <button id="button-cta">Sign up</button>
+        </div>
+        </div>
     <footer>
         Copyright © The Odin Project 2021
     </footer>
